# satoshis-razor

./: .dockerignore  .gitignore  ANVIL.md  Cargo.toml  FORGE.md  FUNNEL.md  README.md  demo.sh  docker-rig.sh  install.sh  mathlib-env.sh  seed.sh
.github/workflows/: verify.yml
anvil/abi/: Cargo.toml
anvil/abi/src/: lib.rs
anvil/harness/: Cargo.toml
anvil/harness/src/: main.rs
anvil/impls/bitrev-naive/: Cargo.toml
anvil/impls/bitrev-naive/src/: lib.rs
anvil/impls/bitrev-swar/: Cargo.toml
anvil/impls/bitrev-swar/src/: lib.rs
anvil/impls/clz-branchless/: Cargo.toml
anvil/impls/clz-branchless/src/: lib.rs
anvil/impls/clz-naive/: Cargo.toml
anvil/impls/clz-naive/src/: lib.rs
anvil/impls/crc64-bitwise/: Cargo.toml
anvil/impls/crc64-bitwise/src/: lib.rs
anvil/impls/crc64-nibble/: Cargo.toml
anvil/impls/crc64-nibble/src/: lib.rs
anvil/impls/evm-common/: Cargo.toml
anvil/impls/evm-common/src/: lib.rs
anvil/impls/evm-ref/: Cargo.toml
anvil/impls/evm-ref/src/: lib.rs
anvil/impls/evm-tos/: Cargo.toml
anvil/impls/evm-tos/src/: lib.rs
anvil/impls/morton-naive/: Cargo.toml
anvil/impls/morton-naive/src/: lib.rs
anvil/impls/morton-pdep/: Cargo.toml
anvil/impls/morton-pdep/src/: lib.rs
anvil/impls/morton-swar/: Cargo.toml
anvil/impls/morton-swar/src/: lib.rs
anvil/impls/popcount-naive/: Cargo.toml
anvil/impls/popcount-naive/src/: lib.rs
anvil/impls/popcount-swar/: Cargo.toml
anvil/impls/popcount-swar/src/: lib.rs
anvil/impls/sbox-scalar/: Cargo.toml
anvil/impls/sbox-scalar/src/: lib.rs
anvil/impls/sbox-swar/: Cargo.toml
anvil/impls/sbox-swar/src/: lib.rs
anvil/impls/sbox-table/: Cargo.toml
anvil/impls/sbox-table/src/: lib.rs
anvil/impls/siphash13-ref/: Cargo.toml
anvil/impls/siphash13-ref/src/: lib.rs
anvil/impls/siphash13-stream/: Cargo.toml
anvil/impls/siphash13-stream/src/: lib.rs
anvil/impls/sort8-batcher/: Cargo.toml
anvil/impls/sort8-batcher/src/: lib.rs
anvil/impls/sort8-bubble/: Cargo.toml
anvil/impls/sort8-bubble/src/: lib.rs
anvil/impls/sort8-gpu/: Cargo.toml
anvil/impls/sort8-gpu/src/: lib.rs
anvil/impls/sort8-network/: Cargo.toml
anvil/impls/sort8-network/src/: lib.rs
anvil/impls/sort8-simd/: Cargo.toml
anvil/impls/sort8-simd/src/: lib.rs
anvil/impls/sort8-swar/: Cargo.toml
anvil/impls/sort8-swar/src/: lib.rs
anvil/impls/sum-closed/: Cargo.toml
anvil/impls/sum-closed/src/: lib.rs
anvil/impls/sum-loop/: Cargo.toml
anvil/impls/sum-loop/src/: lib.rs
anvil/lanes/: README.md
anvil/lanes/crc64-byte-c/: .gitignore  build.sh  crc64_byte_c.c  lane.json
anvil/rig/docker/: Dockerfile
docker/: verify.Dockerfile
ingest/: fetch_thousand_plus.py
ingest/data/: thousand-plus.jsonl
lean/: Razor.lean  lake-manifest.json  lakefile.toml
lean-mathlib/: RazorMathlib.lean  lakefile.toml
lean-mathlib/RazorMathlib/: Statements.lean
lean/Razor/: Certificates.lean  Gauss.lean  Rev.lean
lean/Razor/Anvil/: Bitrev.lean  Clz.lean  Morton.lean  Popcount.lean  Sort8.lean  Sort8Batcher.lean  Sort8Spec.lean  Sort8Swar.lean  Sum.lean
lean/Razor/Evm/: Spec.lean
lean/Razor/Frontier/: ErdosStraus.lean  FLT.lean
lean/Razor/Holes/: Open.lean
lean/Razor/Private/: SSUB106.lean
lean/Razor/Sorries/: Open.lean
lean/Razor/Sorting/: Convergence.lean  Defs.lean  ExploitV1.lean  Glue.lean  Implications.lean  Repin.lean  Solved.lean  Subgoals.lean
lean/Razor/Submissions/: SSUB105.lean  SSUBANV6S.lean  SSUBANV7N.lean  SSUBANV9S.lean  SSUBANV9T2.lean  SSUBAUD3.lean  SSUBAUD5.lean  SSUBBRGR3.lean
lean/Razor/Zk/: Claim.lean  Soundness.lean
registry/: Cargo.toml
registry/data/: events.jsonl  remote.jsonl
registry/data/statements/: STM-102A.lean  STM-102A.salt  STM-102B.lean  STM-102B.salt  STM-R3B.lean
registry/src/: api.rs  main.rs  model.rs  ui.rs  verify.rs
site/: anvil.html  anvil.js  challenge.html  download.html  forge.html  forge.js  frontier.html  hole.html  how.html  index.html  install.sh  people.html  person.html  proposal.html  propose.html  razor.css  razor.js  sorry.html  statement.html  zk.html
zk/: Cargo.toml
zk/src/: circuit.rs  main.rs
