[workspace]
resolver = "2"
members = [
    "registry",
    "zk",
    "anvil/abi",
    "anvil/harness",
    "anvil/impls/popcount-naive",
    "anvil/impls/popcount-swar",
    "anvil/impls/sum-loop",
    "anvil/impls/sum-closed",
    "anvil/impls/sort8-bubble",
    "anvil/impls/sort8-network",
    "anvil/impls/sort8-gpu",
    "anvil/impls/sort8-batcher",
    "anvil/impls/sort8-swar",
    "anvil/impls/sort8-simd",
    "anvil/impls/clz-naive",
    "anvil/impls/clz-branchless",
    "anvil/impls/bitrev-naive",
    "anvil/impls/bitrev-swar",
    "anvil/impls/evm-common",
    "anvil/impls/evm-ref",
    "anvil/impls/evm-tos",
]

[workspace.package]
edition = "2021"
license = "MIT"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
