[workspace]
resolver = "2"
members = [
    "registry",
    "zk",
    "anvil/abi",
    "anvil/harness",
    "anvil/impls/popcount-naive",
    "anvil/impls/popcount-swar",
    "anvil/impls/sum-loop",
    "anvil/impls/sum-closed",
    "anvil/impls/sort8-bubble",
    "anvil/impls/sort8-network",
    "anvil/impls/sort8-gpu",
    "anvil/impls/sort8-batcher",
    "anvil/impls/sort8-swar",
    "anvil/impls/sort8-simd",
    "anvil/impls/clz-naive",
    "anvil/impls/clz-branchless",
    "anvil/impls/bitrev-naive",
    "anvil/impls/bitrev-swar",
    "anvil/impls/evm-common",
    "anvil/impls/evm-ref",
    "anvil/impls/evm-tos",
    "anvil/impls/siphash13-ref",
    "anvil/impls/siphash13-stream",
    "anvil/impls/crc64-bitwise",
    "anvil/impls/crc64-nibble",
    "anvil/impls/morton-naive",
    "anvil/impls/morton-swar",
    "anvil/impls/morton-pdep",
    "anvil/impls/sbox-scalar",
    "anvil/impls/sbox-table",
    "anvil/impls/sbox-swar",
]

[workspace.package]
edition = "2021"
license = "MIT"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
