[package]
name = "zk-prover"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "zk-prover"
path = "src/main.rs"

[dependencies]
ark-bls12-381 = "0.5"
ark-ff = "0.5"
ark-groth16 = "0.5"
ark-relations = "0.5"
ark-serialize = "0.5"
ark-snark = "0.5"
ark-std = "0.5"
rand = "0.8"
rand_chacha = "0.3"
hex = "0.4"
