[package]
name = "anvil-harness"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anvil-abi = { path = "../abi" }
popcount-naive = { path = "../impls/popcount-naive" }
popcount-swar = { path = "../impls/popcount-swar" }
sum-loop = { path = "../impls/sum-loop" }
sum-closed = { path = "../impls/sum-closed" }
sort8-bubble = { path = "../impls/sort8-bubble" }
sort8-network = { path = "../impls/sort8-network" }
sort8-gpu = { path = "../impls/sort8-gpu" }
sort8-batcher = { path = "../impls/sort8-batcher" }
sort8-swar = { path = "../impls/sort8-swar" }
sort8-simd = { path = "../impls/sort8-simd" }
clz-naive = { path = "../impls/clz-naive" }
clz-branchless = { path = "../impls/clz-branchless" }
bitrev-naive = { path = "../impls/bitrev-naive" }
bitrev-swar = { path = "../impls/bitrev-swar" }
evm-ref = { path = "../impls/evm-ref" }
evm-tos = { path = "../impls/evm-tos" }
siphash13-ref = { path = "../impls/siphash13-ref" }
siphash13-stream = { path = "../impls/siphash13-stream" }
crc64-bitwise = { path = "../impls/crc64-bitwise" }
crc64-nibble = { path = "../impls/crc64-nibble" }
morton-naive = { path = "../impls/morton-naive" }
morton-swar = { path = "../impls/morton-swar" }
morton-pdep = { path = "../impls/morton-pdep" }
sbox-scalar = { path = "../impls/sbox-scalar" }
sbox-table = { path = "../impls/sbox-table" }
sbox-swar = { path = "../impls/sbox-swar" }
wasmtime = { version = "27", default-features = false, features = ["cranelift", "runtime"] }
serde_json = "1"
